[package]
name = "krabby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.11", features = ["blocking"] }
serenity = { version = "0.11", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
] }
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
